--- a/MobileUser/package.json
+++ b/MobileUser/package.json
@@ -30,6 +30,7 @@
     "@react-native/eslint-config": "0.79.2",
     "@react-native/metro-config": "0.79.2",
     "@react-native/typescript-config": "0.79.2",
+    "@testing-library/react-native": "^13.3.3",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.0.0",
     "@types/react-test-renderer": "^19.0.0",
@@ -37,7 +38,7 @@
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-native-dotenv": "^3.4.11",
-    "react-test-renderer": "19.0.0",
+    "react-test-renderer": "^19.0.0",
     "typescript": "5.0.4"
   },
   "engines": {
